fix dark mode toggler

--- a/hugo/static/styles.css
+++ b/hugo/static/styles.css
@@ -268,7 +268,10 @@ sup {font-size:xx-small; vertical-align:super;}
   --bs-link-hover-color-rgb: 158, 197, 254;
   --bs-code-color: #e685b5;
   --bs-border-color: #495057;
-  --bs-border-color-translucent: rgba(255, 255, 255, 0.15);
+  --bs-border-color-translucent: rgba(255, 255, 255, 0.15);  
+    }
+    .navbar  {
+  --bs-navbar-toggler-icon-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 0.55%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
     }
 }
 
